Texture fonts not working in single and multitexture mode. #33762

Closed
opened 2013-01-04 20:50:35 +01:00 by Thomas Szepe · 7 comments
Member

Category: Rendering

%%%Since Blender 2.63 texture fonts are not working. It look like they are using vertex colors. After a restart of Blender the colors are changing.
Since Blender 2.65 the multitexture mode has the same problem, if the alpha is enabled in the texture panel.

Blender 2.63 singletexture mode not working
Blender 2.65 single and multitexture mode not working

Windows XP 32 bit
Nvidia GeForce GTX 460
%%%

**Category**: Rendering %%%Since Blender 2.63 texture fonts are not working. It look like they are using vertex colors. After a restart of Blender the colors are changing. Since Blender 2.65 the multitexture mode has the same problem, if the alpha is enabled in the texture panel. Blender 2.63 singletexture mode not working Blender 2.65 single and multitexture mode not working Windows XP 32 bit Nvidia GeForce GTX 460 %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%I made a patch, that brings back the original functionality from blender 2.62 (before Bmesh).
The patch doesn't fix any of the other material or bitmap font bugs.%%%

%%%I made a patch, that brings back the original functionality from blender 2.62 (before Bmesh). The patch doesn't fix any of the other material or bitmap font bugs.%%%
Author
Member

%%%Add new patch that change the function back GetMCol(void) back to const and update the patch to work with the actual trunk.
%%%

%%%Add new patch that change the function back GetMCol(void) back to const and update the patch to work with the actual trunk. %%%

This issue was referenced by 82313b4fc4abed5646255cdc603015d55292f368

This issue was referenced by 82313b4fc4abed5646255cdc603015d55292f368
Inês Almeida self-assigned this 2014-06-18 18:01:11 +02:00
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit 82313b4fc4.

Closed by commit 82313b4fc4.

This issue was referenced by 8db9b07cb3

This issue was referenced by 8db9b07cb32edfea533072279a249725f24313c9
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33762
No description provided.