Fix T33762 - texture fonts were not using the material color (gameengine)